[package]
authors = ["irieryota <ryotairie123@gmail.com>"]
edition = "2018"
name = "mini-runtime-2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.0"
futures = "0.3"
mini-redis = "0.2"
mio = {version = "0.7.10", features = ["os-poll", "net"]}
once_cell = "1.7.2"
tokio = {version = "0.2", features = ["full"]}
uuid = {version = "0.8.2", features = ["v4"]}
